<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    android:layout_height="470dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/loginCardRadius">
    <LinearLayout
        style="@style/linearParent"
        android:layout_height="500dp"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">
        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/register" />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/txtUserName"
                style="@style/modifiedEditText"
                android:drawableLeft="@drawable/ic_person"
                android:hint="Name"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/txtEmail"
                style="@style/modifiedEditText"
                android:drawableLeft="@drawable/ic_mail"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/txtPassword"
                style="@style/modifiedEditText"
                android:drawableStart="@drawable/ic_action_lock"
                android:drawableLeft="@drawable/ic_action_lock"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />
            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword1"
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top"
            android:drawableLeft="@drawable/ic_action_lock"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/txtConfirmPasswod"
                style="@style/modifiedEditText"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnRegister"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="Register"
            android:textColor="@color/loginBkColor" />
        <TextView
            android:id="@+id/txtSignIn"
            style="@style/parent"
            android:layout_marginTop="20dp"
            android:onClick="viewLoginClicke"
            android:gravity="center_horizontal"
            android:text="@string/signup_login_hint"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.cardview.widget.CardView>